--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
@@ -7,7 +7,7 @@
 <body>
     <#include "/header.html">
     <div class="cvpage_title_common">报道专题管理</div>
-    <div id="meeting_list" class="cv_page_content">
+    <div id="meetinglivepage_list" class="cv_page_content">
         <!--列表搜索区-->
         <div class="cv_content_square">
             <el-form :model="searchForm" status-icon class="demo-ruleForm" label-position="right">
