--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
@@ -3,11 +3,11 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
 
-<title>新建/编辑专题报道</title>
+<title>新建/编辑报道专题</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">新建/编辑专题报道</div>
+    <div class="cvpage_title_common">新建/编辑报道专题</div>
     <div id="edit_meetinglive" class="cv_page_content">
 
         <el-form :model="meetingliveForm" :rules="meetingliveFormRules" ref="meetingliveForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
@@ -240,7 +240,8 @@
                                 <el-switch
                                     v-model="meetingliveForm.jsonData.venueReport.isShowFloor"
                                     active-text="显示"
-                                    inactive-text="隐藏">
+                                    inactive-text="隐藏"
+                                    @change="meetingLiveDefaultChange">
                                 </el-switch>
                             </el-form-item>
                         </el-col>
@@ -266,7 +267,7 @@
                                 </el-form-item>
                             </el-col>
                             <el-col class="el-row-h40" :offset="1" :span="3">
-                                <el-button style="width: 100%;" @click="">修改</el-button>
+                                <el-button style="width: 100%;" @click="openAddMeetingLiveList">修改</el-button>
                             </el-col>
                         </el-row>
                     </div>
@@ -472,6 +473,55 @@
         </el-dialog>
         <!--内容图库弹出层结束-->
 
+
+
+        <!-- 会场报道弹出层开始 -->
+        <el-dialog title="会场报道列表" :visible.sync="showMeetingLiveLib" width="100%" :fullscreen="true" :show-close="false">
+            <el-form :model="searchMeetingLiveForm" status-icon class="demo-ruleForm" label-width="10%" label-position="right" @submit.native.prevent>
+                <el-row class="el-row-h60">
+                    <el-col :span="16">
+                        <el-form-item label="名称" style="margin:0;">
+                            <el-input
+                            clearable
+                            type="text"
+                            v-model="searchMeetingLiveForm.name"
+                            auto-complete="off"></el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchMeetingLive(0)">搜索</el-button>
+                    </el-col>
+                    <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-button type="primary" style="width:100%" @click="backToEditFromMeetingLive()">返回</el-button>
+                    </el-col>
+                </el-row>
+            </el-form>
+            <el-table :data="meetingLiveTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="meetingLiveTableData" stripe>
+                <el-table-column prop="id" label="会场报道编号" width="110"></el-table-column>
+                <el-table-column prop="name" label="名称" ></el-table-column>
+                <el-table-column prop="updateAt" label="更新时间" width="220"></el-table-column>
+                <el-table-column prop="modUserName" label="更新人" width="110"></el-table-column>
+                <el-table-column label="操作" width="110" fixed="right">
+                    <template slot-scope="scope">
+                        <el-button type="text" size="small" @click="addThisMeetingLive(scope.row)">添加</el-button>
+                    </template>
+                </el-table-column>
+            </el-table>
+            <!--分页器-->
+            <div class="cv_page_zone">
+                <el-pagination
+                    @current-change="handleCurrentChange2"
+                    :current-page="pagination2.currPage"
+                    :page-size="pagination2.pageSize"
+                    layout="total, prev, pager, next, jumper"
+                    :total="pagination2.totalCount">
+                </el-pagination>
+            </div>
+        </el-dialog>
+        <!-- 会场报道弹出层结束 -->
+
+
+
         <!--日程表弹出层开始-->
         <el-dialog title="会议日程列表" :visible.sync="showCalendarLib" width="100%" :fullscreen="true" :show-close="false" >
             <el-form :model="searchCalendarForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
@@ -494,11 +544,11 @@
                 </el-row>
             </el-form>
             <el-table :data="calendarTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="calendarTableData" stripe>
-                <el-table-column prop="meetingAgendaId" label="日程编号" ></el-table-column>
+                <el-table-column prop="meetingAgendaId" label="日程编号" width="110"></el-table-column>
                 <el-table-column prop="meetingAgendaTitle" label="会议日程名称" ></el-table-column>
-                <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
-                <el-table-column prop="meetingAgendaCrtTime" label="创建时间" width="200"></el-table-column>
-                <el-table-column label="操作" width="100" fixed="right">
+                <el-table-column prop="userName" label="创建人" width="110"></el-table-column>
+                <el-table-column prop="meetingAgendaCrtTime" label="创建时间" width="220"></el-table-column>
+                <el-table-column label="操作" width="110" fixed="right">
                     <template slot-scope="scope">
                         <el-button type="text" size="small" @click="addThisCalendar(scope.row)">添加</el-button>
                     </template>
@@ -541,9 +591,9 @@
             <el-table :data="coperationTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="coperationTableData" stripe>
                 <el-table-column prop="meetingCooperationId" label="会议机构编号" width="110"></el-table-column>
                 <el-table-column prop="meetingCooperationTitle" label="会议机构标题" width=""></el-table-column>
-                <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
-                <el-table-column prop="meetingCooperationCrtTime" label="创建时间" width="200"></el-table-column>
-                <el-table-column label="操作" width="100" fixed="right">
+                <el-table-column prop="userName" label="创建人" width="110"></el-table-column>
+                <el-table-column prop="meetingCooperationCrtTime" label="创建时间" width="220"></el-table-column>
+                <el-table-column label="操作" width="110" fixed="right">
                     <template slot-scope="scope">
                         <el-button type="text" size="small" @click="addThisCoperation(scope.row)">添加</el-button>
                     </template>
