--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
@@ -46,7 +46,7 @@
         <!--功能按钮区-->
         <el-row class="el-row-h50">
             <el-col :span="4">
-                <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="creatMeeting">新建报道专题</el-button>
+                <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="creatMeeting">新建报道专题</el-button>
             </el-col>
         </el-row>
 
@@ -75,9 +75,9 @@
                 <el-table-column label="操作" width="140" fixed="right">
                     <template slot-scope="scope">
                         <el-button type="text" size="small" @click="editThisMeeting(scope.row)">编辑</el-button>
-                        <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="deleteThisMeeting(scope.row)">删除</el-button>
-                        <el-button type="text" v-if="scope.row.publishStatus == '0' || scope.row.publishStatus == 3" size="small" @click="onlineThisMeeting(scope.row)">发布</el-button>
-                        <el-button type="text" size="small" v-if="scope.row.publishStatus == 2" @click="offlineThisMeeting(scope.row)">下线</el-button>
+                        <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="deleteThisMeetingLive(scope.row)">删除</el-button>
+                        <el-button type="text" v-if="scope.row.publishStatus == '0' || scope.row.publishStatus == 3" size="small" @click="onlineThisMeetingLive(scope.row)">发布</el-button>
+                        <el-button type="text" size="small" v-if="scope.row.publishStatus == 2" @click="offlineThisMeetingLive(scope.row)">下线</el-button>
                     </template>
                 </el-table-column>
             </el-table>
@@ -97,6 +97,8 @@
     </div>
 </body>
 
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.min.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.base64.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/meetinglivepage_list.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
