--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvdavos_2020.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvdavos_2020.html
@@ -106,7 +106,7 @@
                 </el-collapse-item>
 
                 <!--嘉宾管理-->
-                <!-- <el-collapse-item title="嘉宾管理" name="3">
+                <el-collapse-item title="嘉宾管理" name="3">
                     <el-row class="el-row-h50">
                         <el-col :span="10">
                             <el-form-item label="嘉宾编号" prop="" label-width="30%" style="margin:0;">
@@ -117,9 +117,9 @@
                                 </el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col class="el-row-h40" :offset="1" :span="13">请到<b style="color: #175CE9;">嘉宾管理—会议嘉宾</b>中配置相关内容，本次会议的会议编号为：<b style="color: #175CE9;">2</b></el-col>
+                        <el-col class="el-row-h40" :offset="1" :span="13">请到<b style="color: #175CE9;">参会嘉宾</b>中配置相关内容，本次会议的会议编号为：<b style="color: #175CE9;">3</b></el-col>
                     </el-row>
-                </el-collapse-item> -->
+                </el-collapse-item>
 
                 <!--榜单管理-->
                 <!-- <el-collapse-item title="榜单管理" name="4">
